@@ -1,3 +1,11 @@
+2009-07-10  Alexandru Harsanyi  <haral@users.sourceforge.net>
+
+	* vc-clearcase.el (vc-clearcase-annotate-contributor)
+	(vc-clearcase-annotate-contributor-to-line)
+	(vc-clearcase-annotate-latest-on-branch): new functions
+	(vc-clearcase-patch-annotate-mode): new function, called after
+	vc-annotate is loaded.
+
 2009-05-19  Alexandru Harsanyi  <haral@users.sourceforge.net>
 
 	* vc-clearcase.el (clearcase-read-view-tag): fix let binding
